[package]
name = "sandwhichBot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full", "unix"] }
web3 = "0.15.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio-stream = "0.1.5"
ethcontract = "0.23.2"
flashbots = "0.1"
ethers = "2.0.2"
dotenv = "0.15.0"